# simple_belfast_pi

./: .gitignore  CMakeLists.txt  metadata.json  metadata.xml  optimized_query.sql  performance_summary.md  query_analysis.sql  ultra_optimized_query.sql
.github/workflows/: plugin_ci.yml
src/: CMakeLists.txt  simple_belfast_pi.cpp  simple_belfast_pi.h
